force-app/main/default/objects/Collection__c/fields/Collection_Note__c.field-meta.xml
<CustomField>
    <fullName>Collection_Note__c</fullName>
    <inlineHelpText>e.g.  Collect from car park in front of building. Code to access is 1234.</inlineHelpText>
    <label>Collection Note</label>
    <type>TextArea</type>
</CustomField>