force-app/main/default/objects/Collection__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <defaultValue>&quot;18:00&quot;</defaultValue>
    <inlineHelpText>24 hour  format</inlineHelpText>
    <label>Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>